--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -7,8 +7,7 @@
 name: Build - Windows
 
 on:
-  push:
-    branches: ["main", "dev"]
+  pull_request:
   workflow_dispatch:
 
 jobs:
@@ -21,15 +20,132 @@ jobs:
         with:
           submodules: "recursive"
 
-      - name: "2. Configure CMake"
-        # No build type needed here; Visual Studio will handle it
-        run: cmake -S . -B build
+      - name: "2. Detect ULTRALIGHT_SDK_URL from repo sdks branch (Windows)"
+        id: detect_url
+        shell: pwsh
+        run: |
+          if ($env:ULTRALIGHT_SDK_URL) {
+            Write-Host "ULTRALIGHT_SDK_URL already provided: $env:ULTRALIGHT_SDK_URL"
+            exit 0
+          }
+          $header = "data/include/Ultralight/Defines.h"
+          if (-not (Test-Path $header)) {
+            Write-Host "Header not found at $header, skipping auto-detect."
+            exit 0
+          }
+          $version = (Select-String -Path $header -Pattern '^#define\s+ULTRALIGHT_VERSION\s+"([^"]+)"' | ForEach-Object { $_.Matches[0].Groups[1].Value } | Select-Object -First 1)
+          if (-not $version) {
+            Write-Host "Could not determine ULTRALIGHT_VERSION from $header, skipping auto-detect."
+            exit 0
+          }
+          $baseRaw = "https://raw.githubusercontent.com/${{ github.repository }}/sdks/sdks"
+          Write-Host "Detected ULTRALIGHT_VERSION=$version; probing Windows SDK URLs under $baseRaw"
+          Write-Host "Header path: $header"
+          Write-Host "Repository: ${{ github.repository }}"
+          Write-Host "Commit: ${{ github.sha }}"
+          $candidates = @(
+            "$baseRaw/ultralight-free-sdk-$version-win-x64.7z",
+            "$baseRaw/ultralight-free-sdk-$version-windows-x64.7z"
+          )
+          function Test-Url($u) {
+            try { $r = Invoke-WebRequest -Uri $u -Method Head -UseBasicParsing; return $true } catch {}
+            try {
+              $tmp = Join-Path $env:RUNNER_TEMP "probe.tmp"
+              Invoke-WebRequest -Uri $u -Method Get -UseBasicParsing -OutFile $tmp | Out-Null
+              Remove-Item $tmp -ErrorAction SilentlyContinue
+              return $true
+            } catch { return $false }
+          }
+          $found = $null
+          foreach ($url in $candidates) {
+            Write-Host "Probing $url"
+            if (Test-Url $url) { $found = $url; break }
+          }
+          if ($found) {
+            Write-Host "Auto-detected ULTRALIGHT_SDK_URL=$found"
+            "ULTRALIGHT_SDK_URL=$found" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+            "url=$found" | Out-File -FilePath $env:GITHUB_OUTPUT -Encoding utf8 -Append
+          } else {
+            Write-Error "Could not auto-detect a valid Windows SDK URL in sdks branch for version $version."
+            exit 1
+          }
 
-      - name: "3. Build Project"
+      - name: "3. Install 7zip"
+        shell: pwsh
+        run: |
+          choco install 7zip -y
+          7z -version | Out-Host
+
+      - name: "4. Prepare Ultralight SDK (Windows)"
+        id: prep_sdk
+        shell: pwsh
+        run: |
+          $rootDefault = Join-Path $env:GITHUB_WORKSPACE 'data'
+          $root = $env:ULTRALIGHT_SDK_ROOT
+          if (-not $root) { $root = $rootDefault }
+          Write-Host "Initial ULTRALIGHT_SDK_ROOT candidate: $root"
+          $present = 'false'
+          if ((Test-Path (Join-Path $root 'include')) -and ((Test-Path (Join-Path $root 'lib')) -or (Test-Path (Join-Path $root 'bin')))) {
+            $present = 'true'
+          } elseif ($env:ULTRALIGHT_SDK_URL) {
+            Write-Host "Downloading Ultralight SDK from ULTRALIGHT_SDK_URL=$env:ULTRALIGHT_SDK_URL"
+            $pkg = Join-Path $env:RUNNER_TEMP 'ultralight-sdk'
+            Invoke-WebRequest -Uri $env:ULTRALIGHT_SDK_URL -UseBasicParsing -OutFile $pkg
+            Write-Host "Downloaded SDK archive at: $pkg"
+            Get-Item $pkg | Format-List -Property FullName,Length
+            $extract = Join-Path $env:RUNNER_TEMP 'sdk-extract'
+            New-Item -ItemType Directory -Force -Path $extract | Out-Null
+            if ($env:ULTRALIGHT_SDK_URL -notmatch '\.7z$') {
+              Write-Error "Expected a .7z SDK archive, got: $env:ULTRALIGHT_SDK_URL"; exit 1
+            }
+            & 7z x -y -o"$extract" "$pkg" | Out-Null
+            Write-Host "Extraction tree (depth 2):"
+            Get-ChildItem -Path $extract -Depth 2 -Directory | ForEach-Object { $_.FullName } | ForEach-Object { "  $_" }
+            $rootFound = Get-ChildItem -Path $extract -Recurse -Directory | Where-Object { Test-Path (Join-Path $_.FullName 'include') -and Test-Path (Join-Path $_.FullName 'lib') } | Select-Object -First 1
+            if ($rootFound) { $root = $rootFound.FullName; $present = 'true' }
+          }
+          "present=$present" | Out-File -FilePath $env:GITHUB_OUTPUT -Encoding utf8 -Append
+          if ($present -eq 'true') {
+            Write-Host "Using ULTRALIGHT_SDK_ROOT=$root"
+            "ULTRALIGHT_SDK_ROOT=$root" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+            Write-Host "Listing selected SDK include and lib:"
+            if (Test-Path (Join-Path $root 'include')) { Get-ChildItem -Force (Join-Path $root 'include') | Select-Object -First 50 | Format-List -Property Mode,Length,Name }
+            if (Test-Path (Join-Path $root 'lib')) { Get-ChildItem -Force (Join-Path $root 'lib') | Format-List -Property Mode,Length,Name }
+          } else {
+            Write-Error "Ultralight Windows SDK not found. Ensure sdks branch contains a valid archive or set ULTRALIGHT_SDK_ROOT/ULTRALIGHT_SDK_URL."; exit 1
+          }
+
+      - name: "5. Configure CMake"
+        if: steps.prep_sdk.outputs.present == 'true'
+        run: |
+          cmake --version
+          Write-Host "Configuring with ULTRALIGHT_SDK_ROOT=$env:ULTRALIGHT_SDK_ROOT"
+          cmake -S . -B build -DULTRALIGHT_SDK_ROOT="${{ env.ULTRALIGHT_SDK_ROOT }}"
+
+      - name: "6. Build Project"
         # We specify the 'Release' config at build time
         run: cmake --build build --config Release --parallel
 
-      - name: "4. Archive Artifacts"
+      - name: "6.5 Diagnostics: verify runtime contents"
+        shell: pwsh
+        run: |
+          $candidates = @(
+            'build\Release',
+            'build\bin\Release',
+            'build\Ultralight-WebBrowser\Release',
+            'build\samples\Ultralight-WebBrowser\Release'
+          )
+          $src = $null
+          foreach ($p in $candidates) {
+            if (Test-Path $p) { $src = $p; break }
+          }
+          if (-not $src) { throw "No expected output folder found for diagnostics. Checked: $($candidates -join ', ')" }
+          Write-Host "Listing runtime directory: $src"
+          Get-ChildItem -Force $src | Format-List -Property Mode,Length,Name
+          Write-Host "Listing DLLs:"; Get-ChildItem -Path (Join-Path $src '*.dll') -ErrorAction SilentlyContinue | Format-List -Property Mode,Length,Name
+          Write-Host "Listing resources:"; if (Test-Path (Join-Path $src 'assets/resources')) { Get-ChildItem -Force (Join-Path $src 'assets/resources') | Format-List -Property Mode,Length,Name } else { Write-Host 'assets/resources not found' }
+
+      - name: "7. Archive Artifacts"
         # For multi-config, Visual Studio places outputs in 'build/Release'
         # We use PowerShell's Compress-Archive
         shell: pwsh
@@ -51,7 +167,7 @@ jobs:
           Write-Host "Archiving from: $src"
           Compress-Archive -Path (Join-Path $src '*') -DestinationPath ultralight-windows.zip -Force
 
-      - name: "5. Upload Artifact"
+      - name: "8. Upload Artifact"
         uses: actions/upload-artifact@v4
         with:
           name: ultralight-windows-build
